--- a/src/Bunker.Game.Domain/Bunker.Game.Domain.csproj
+++ b/src/Bunker.Game.Domain/Bunker.Game.Domain.csproj
@@ -1,11 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-
+    <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <Folder Include="AggregateModels\GameResultCreators\" />
+    <Folder Include="AggregateModels\GameSessions\Characters\" />
+    <Folder Include="AggregateModels\GameSessions\Bunkers\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SonarAnalyzer.CSharp">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -14,6 +21,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bunker.Domain.Shared\Bunker.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
