--- a/src/Bunker.Game.Domain/Bunker.Game.Domain.csproj
+++ b/src/Bunker.Game.Domain/Bunker.Game.Domain.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bunker.Shared.Analyzers" />
     <PackageReference Include="SonarAnalyzer.CSharp">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+      <ProjectReference Include="D:\Code\Bunker.Shared.Analyzers\Bunker.Shared.Analyzers\Bunker.Shared.Analyzers\Bunker.Shared.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
