--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,5 +15,6 @@
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.5.0.109200" />
     <PackageVersion Include="SonarAnalyzer.CSharp.Styling" Version="10.5.0.109200" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
 </Project>
