--- a/src/Bunker.GameComponents.API/appsettings.json
+++ b/src/Bunker.GameComponents.API/appsettings.json
@@ -1,12 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "PostgresConnection": ""
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    }
   },
   "AllowedHosts": "*"
 }
