open api generator fixes and created nswag http client generator

--- a/src/Bunker.Game.API/Bunker.Game.API.csproj
+++ b/src/Bunker.Game.API/Bunker.Game.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bunker.Game.Domain\Bunker.Game.Domain.csproj" />
+    <ProjectReference Include="..\Bunker.Game.Infrastructure\Bunker.Game.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
