refactoring, fixes and created tests

--- a/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
+++ b/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Bunker.Game.Domain\Bunker.Game.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Generators\CharacterFactories\" />
+  </ItemGroup>
+
 </Project>
