--- a/src/Bunker.Game.API/appsettings.json
+++ b/src/Bunker.Game.API/appsettings.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "PostgresConnection": ""
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
