bug fixes and added game commands

--- a/src/Bunker.Game.API/Bunker.Game.API.csproj
+++ b/src/Bunker.Game.API/Bunker.Game.API.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Commands\Bunkers\" />
+    <Folder Include="Application\Commands\Catastrophes\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
