--- a/src/Bunker.Game.API/appsettings.json
+++ b/src/Bunker.Game.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "PostgresConnection": ""
   },
+
+  "GameComponents": {
+    "Address": ""
+  },
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
