--- a/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
+++ b/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapper" />
+        <PackageReference Include="Dapper.SqlBuilder" />
         <PackageReference Include="NSwag.ApiDescription.Client">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Bunker.Game.Application\Bunker.Game.Application.csproj" />
         <ProjectReference Include="..\Bunker.Game.Domain\Bunker.Game.Domain.csproj" />
     </ItemGroup>
 
