--- a/src/Bunker.Game.API/Bunker.Game.API.csproj
+++ b/src/Bunker.Game.API/Bunker.Game.API.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Scrutor" />
+      <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
