fixed bugs and write create game session functional tests

--- a/tests/Bunker.Game.Tests/Bunker.Game.Tests.csproj
+++ b/tests/Bunker.Game.Tests/Bunker.Game.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Bogus" />
       <PackageReference Include="coverlet.collector" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" />
