refactoring and added open telemetry support

--- a/src/Bunker.Game.API/appsettings.Development.json
+++ b/src/Bunker.Game.API/appsettings.Development.json
@@ -8,5 +8,16 @@
         "Microsoft.Hosting.Lifetime": "Information"
       }
     }
+  },
+  "OpenTelemetry": {
+    "Logging": {
+      "CollectorAddress": ""
+    },
+    "Metrics": {
+      "CollectorAddress": ""
+    },
+    "Tracing": {
+      "CollectorAddress": ""
+    }
   }
 }
