--- a/src/Bunker.Game.API/Bunker.Game.API.csproj
+++ b/src/Bunker.Game.API/Bunker.Game.API.csproj
@@ -1,33 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>c343dd28-874a-4ddb-bedb-969605a83d7d</UserSecretsId>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>c343dd28-874a-4ddb-bedb-969605a83d7d</UserSecretsId>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Ardalis.Result" />
-    <PackageReference Include="Ardalis.Result.AspNetCore" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Scrutor" />
-      <PackageReference Include="Swashbuckle.AspNetCore" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Ardalis.Result" />
+        <PackageReference Include="Ardalis.Result.AspNetCore" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>      
+        <PackageReference Include="Serilog.AspNetCore" />
+        <PackageReference Include="Swashbuckle.AspNetCore" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Controllers\" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Bunker.Game.Application\Bunker.Game.Application.csproj" />
-    <ProjectReference Include="..\Bunker.Application.Shared\Bunker.Application.Shared.csproj" />
-    <ProjectReference Include="..\Bunker.Game.Domain\Bunker.Game.Domain.csproj" />
-    <ProjectReference Include="..\Bunker.Game.Infrastructure\Bunker.Game.Infrastructure.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Bunker.Application.Shared\Bunker.Application.Shared.csproj" />
+        <ProjectReference Include="..\Bunker.Game.Application\Bunker.Game.Application.csproj" />
+        <ProjectReference Include="..\Bunker.Game.Domain\Bunker.Game.Domain.csproj" />
+        <ProjectReference Include="..\Bunker.Game.Infrastructure\Bunker.Game.Infrastructure.csproj" />
+        <ProjectReference Include="..\Bunker.Infrastructure.Shared\Bunker.Infrastructure.Shared.csproj" />
+    </ItemGroup>
 
 </Project>
