--- a/src/Bunker.Game.API/appsettings.json
+++ b/src/Bunker.Game.API/appsettings.json
@@ -17,5 +17,16 @@
       }
     }
   },
+  "OpenTelemetry": {
+    "Logging": {
+      "CollectorAddress": ""
+    },
+    "Metrics": {
+      "CollectorAddress": ""
+    },
+    "Tracing": {
+      "CollectorAddress": ""
+    }
+  },
   "AllowedHosts": "*"
 }
