--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Kubernetes secrets (НЕ коммитить!)
+deployment/*-secret.yaml
+deployment/secrets/
+*secret*.yaml
+*.env.production
+*.env.local
