added logging, telemetry

--- a/src/Bunker.ResultCreator.API/appsettings.json
+++ b/src/Bunker.ResultCreator.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AI": {
-    "Provider": "GigaChat",
+    "Provider": "Ollama",
     "Chat": {
       "Temperature": 0.9,
       "MaxOutputTokens": 1012,
@@ -35,6 +35,17 @@
       "MaxTokens": 512,
       "N": 1,
       "Stream": false
+    }
+  },
+  "OpenTelemetry": {
+    "Logging": {
+      "CollectorAddress": ""
+    },
+    "Metrics": {
+      "CollectorAddress": ""
+    },
+    "Tracing": {
+      "CollectorAddress": ""
     }
   }
 }
