--- a/deployment/bunker-helm/Chart.yaml
+++ b/deployment/bunker-helm/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: bunker-helm
 description: A Bunker Helm chart for Kubernetes
 type: application
-version: 0.1.1
-appVersion: "0.9.2"
+version: 1.1.0
+appVersion: "1.1.0"
 maintainers:
   - name: Kirill Tarasov
     email: kirillf2412@gmail.com
@@ -11,4 +11,12 @@ dependencies:
   - name: postgresql
     version: 16.7.15
     repository: https://charts.bitnami.com/bitnami
-    condition: postgresql.buildin
+    condition: postgresql.enabled
+  - name: strimzi-kafka-operator
+    version: 0.41.0
+    repository: https://strimzi.io/charts/
+    condition: kafka.enabled
+  - name: ollama
+    version: 1.23.0
+    repository: https://helm.otwld.com/
+    condition: ollama.enabled
