bug fixes and added caching

--- a/src/Bunker.Game.API/appsettings.json
+++ b/src/Bunker.Game.API/appsettings.json
@@ -1,10 +1,13 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": ""
+    "PostgresConnection": "",
+    "RedisConnection": "localhost:6379"
   },
 
   "GameComponents": {
-    "Address": ""
+    "Address": "",
+    "CacheExpirationTimeInMinutes": 30,
+    "CacheEnabled": true
   },
 
   "Serilog": {
