--- a/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
+++ b/src/Bunker.Game.Infrastructure/Bunker.Game.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -7,8 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.Redis" />
         <PackageReference Include="Dapper" />
         <PackageReference Include="Dapper.SqlBuilder" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Redis" />
         <PackageReference Include="NSwag.ApiDescription.Client">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,6 +24,10 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+        <PackageReference Include="StackExchange.Redis" />
+        <PackageReference Include="System.Net.Http" />
+        <PackageReference Include="System.Net.Security" />
+        <PackageReference Include="System.Text.RegularExpressions" />
     </ItemGroup>
 
     <ItemGroup>
